--- a/react/day02/jsx.html
+++ b/react/day02/jsx.html
@@ -10,7 +10,9 @@
 <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 
-<script src="element.js"></script>
-<script src="tick.js"></script>
+<!--<script src="element.js"></script>-->
+<!--<script src="tick.js"></script>-->
+<!--<script src="prop.js"></script>-->
+<script src="clock.js"></script>
 </body>
 </html>
