--- a/react/day02/jsx.html
+++ b/react/day02/jsx.html
@@ -13,6 +13,7 @@
 <!--<script src="element.js"></script>-->
 <!--<script src="tick.js"></script>-->
 <!--<script src="prop.js"></script>-->
-<script src="clock.js"></script>
+<!--<script src="clock.js"></script>-->
+<script src="count.js"></script>
 </body>
 </html>
